# staubli

./: CMakeLists.txt  README.md  display.launch  package.xml  urdf.rviz
launch/: load_rx60l.launch  load_rx60l_gripper.launch  test_rx60l.launch  test_rx60l_gripper.launch
meshes/: RX60BL_HB1.stl  RX60BL_HB2.stl  RX60BL_HB6.dae  RX60BL_HB6.stl
meshes/rx60l/collision/: rx60bl_hb.stl
meshes/rx60l/visual/: RX60BL_HB4.dae  RX60BL_HB5.dae  rx60bl_hb.dae  rx60bl_hb.stl  rx60bl_hb1.dae  rx60bl_hb3.dae  rx60bl_hb3.stl  rx60bl_hb4.stl  rx60bl_hb5.stl
urdf/: Staubli_RX60L.urdf  Staubli_RX60L_gripper.urdf  rx60l.urdf  rx60l.xacro  rx60l_gripper.urdf  rx60l_gripper.xacro  rx60l_gripper_macro.xacro  rx60l_macro.xacro
vplus/: ros_server.pg
